--- a/index.html
+++ b/index.html
@@ -10,52 +10,111 @@
 <body>
     <table>
         <tr>
+            <td>red</td>
+            <td>red</td>
+            <td colspan="8"></td>
+            <td>blue</td>
+            <td>blue</td>
+        </tr>
+        <tr>
+            <td>red</td>
+            <td>red</td>
+            <td colspan="8"></td>
+            <td>blue</td>
+            <td>blue</td>
+        </tr>
+        <tr>
+            <td colspan="2"></td>
             <td>START</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
+            <td>x</td>
+            <td>x</td>
+            <td colspan="2"></td>
         </tr>
         <tr>
+            <td colspan="2"></td>
             <td>x</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>red</td>
+            <td>red</td>
+            <td colspan="2" rowspan="2"></td>
+            <td>blue</td>
+            <td>blue</td>
             <td>x</td>
+            <td colspan="2"></td>
         </tr>
         <tr>
+            <td colspan="2"></td>
             <td>x</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>red</td>
+            <td>red</td>
+            <td>blue</td>
+            <td>blue</td>
             <td>x</td>
+            <td colspan="2"></td>
         </tr>
         <tr>
+            <td colspan="2"></td>
             <td>x</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="6" rowspan="2">Ki nevet a végén?</td>
             <td>x</td>
+            <td colspan="2"></td>
         </tr>
         <tr>
+            <td colspan="2"></td>
             <td>x</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td>x</td>
+            <td colspan="2"></td>
         </tr>
         <tr>
+            <td colspan="2"></td>
+            <td>x</td>
+            <td>yellow</td>
+            <td>yellow</td>
+            <td colspan="2" rowspan="2"></td>
+            <td>green</td>
+            <td>green</td>
+            <td>x</td>
+            <td colspan="2"></td>
+        </tr>
+        <tr>
+            <td colspan="2"></td>
+            <td>x</td>
+            <td>yellow</td>
+            <td>yellow</td>
+            <td>green</td>
+            <td>green</td>
+            <td>x</td>
+            <td colspan="2"></td>
+        </tr>
+        <tr>
+            <td colspan="2"></td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
+            <td>x</td>
+            <td>x</td>
+            <td colspan="2"></td>
+        </tr>
+        <tr>
+            <td>yellow</td>
+            <td>yellow</td>
+            <td colspan="8"></td>
+            <td>green</td>
+            <td>green</td>
+        </tr>
+        <tr>
+            <td>yellow</td>
+            <td>yellow</td>
+            <td colspan="8"></td>
+            <td>green</td>
+            <td>green</td>
         </tr>
     </table>
     <br>
