--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 <body>
     <table>
         <tr>
-            <td>red</td>
-            <td>red</td>
+            <td>🔴</td>
+            <td>🔴</td>
             <td colspan="8"></td>
-            <td>blue</td>
-            <td>blue</td>
+            <td>🔵</td>
+            <td>🔵</td>
         </tr>
         <tr>
-            <td>red</td>
-            <td>red</td>
+            <td>🔴</td>
+            <td>🔴</td>
             <td colspan="8"></td>
-            <td>blue</td>
-            <td>blue</td>
+            <td>🔵</td>
+            <td>🔵</td>
         </tr>
         <tr>
             <td colspan="2"></td>
-            <td>START</td>
+            <td id="redstart">START</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
-            <td>x</td>
+            <td id="bluestart">START</td>
             <td colspan="2"></td>
         </tr>
         <tr>
@@ -92,29 +92,29 @@
         </tr>
         <tr>
             <td colspan="2"></td>
+            <td id="yellowstart">START</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
             <td>x</td>
-            <td>x</td>
-            <td>x</td>
+            <td id="greenstart">START</td>
             <td colspan="2"></td>
         </tr>
         <tr>
-            <td>yellow</td>
-            <td>yellow</td>
+            <td>🟡</td>
+            <td>🟡</td>
             <td colspan="8"></td>
-            <td>green</td>
-            <td>green</td>
+            <td>🟢</td>
+            <td>🟢</td>
         </tr>
         <tr>
-            <td>yellow</td>
-            <td>yellow</td>
+            <td>🟡</td>
+            <td>🟡</td>
             <td colspan="8"></td>
-            <td>green</td>
-            <td>green</td>
+            <td>🟢</td>
+            <td>🟢</td>
         </tr>
     </table>
     <br>
