huuu de sokat haladtam

--- a/index.html
+++ b/index.html
@@ -120,5 +120,6 @@
     <br>
     <input type="button" value="Kezdés!" onclick="kezd()">
     <input type="button" value="Dobás" onclick="dob()">
+    <div></div>
 </body>
 </html>
