--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         </tr>
     </table>
     <br>
+    <input type="number" name="jatekosok" id="jatekosok" value="2" min="2" max="4">
     <input type="button" value="Kezdés!" onclick="kezd()">
     <input type="button" value="Dobás" onclick="dob()">
     <div></div>
