egyelore commitolok mert most nincs infinite ciklus

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <table>
         <tr>
-            <td>🔴</td>
-            <td>🔴</td>
+            <td class="red">🔴</td>
+            <td class="red">🔴</td>
             <td colspan="8"></td>
-            <td>🔵</td>
-            <td>🔵</td>
+            <td class="blue">🔵</td>
+            <td class="blue">🔵</td>
         </tr>
         <tr>
-            <td>🔴</td>
-            <td>🔴</td>
+            <td class="red">🔴</td>
+            <td class="red">🔴</td>
             <td colspan="8"></td>
-            <td>🔵</td>
-            <td>🔵</td>
+            <td class="blue">🔵</td>
+            <td class="blue">🔵</td>
         </tr>
         <tr>
             <td colspan="2"></td>
@@ -103,18 +103,18 @@
             <td colspan="2"></td>
         </tr>
         <tr>
-            <td>🟡</td>
-            <td>🟡</td>
+            <td class="yellow">🟡</td>
+            <td class="yellow">🟡</td>
             <td colspan="8"></td>
-            <td>🟢</td>
-            <td>🟢</td>
+            <td class="green">🟢</td>
+            <td class="green">🟢</td>
         </tr>
         <tr>
-            <td>🟡</td>
-            <td>🟡</td>
+            <td class="yellow">🟡</td>
+            <td class="yellow">🟡</td>
             <td colspan="8"></td>
-            <td>🟢</td>
-            <td>🟢</td>
+            <td class="green">🟢</td>
+            <td class="green">🟢</td>
         </tr>
     </table>
     <br>
