sullyedek a hajoval de legalabb van design

--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
     <input type="number" name="jatekosok" id="jatekosok" value="2" min="2" max="4">
     <input type="button" value="Kezdés!" onclick="kezd()">
     <input type="button" value="Dobás" onclick="dob()">
-    <div></div>
+    <div>
+        <p>Egy játékosnak négy azonos színű bábuja van, ezeket kezdés előtt a pályán kívül kijelölt helyekre kell tenni.</p>
+        <p>A játék célja mind a négy figurát a pályán körbejáratva eljuttatni a pálya közepén levő kis területre, amelynek neve ház.</p>
+        <p>A játékosok egy kockával dobnak.</p>
+        <p>Egy bábut az azonos színnel jelölt startmezőn át kell játékba hozni, itt nyíl is mutatja a haladás irányát. A játékba hozásra akkor van lehetőség, ha a játékos 6-ost dob. A bábut a színes mezőre kell helyezni, ilyenkor a játékos még egyet dobhat. Ha a startmezőn saját bábu áll, akkor oda nem tehető ki újabb bábu. 6-os dobás esetén nem kötelező pályán kívül levő bábut játékba hozni.</p>
+        <p>A játékos a dobás után a bábujával a megfelelő számú mezőt lép menetirányba. Amikor több bábuja van a pályán, akkor a játékos eldöntheti, hogy melyikkel lép. A bábuk átugorhatják egymást, de az átugrott mező is beleszámít a lépésbe. Ha egy bábu körbeért a pályán, akkor a saját startmezője előtt befordul az azonos színű kerti útra, és halad a ház felé. Amelyik bábu beért a házba, az nem lép többet.</p>
+        <p>A játékos nem léphet a bábujával úgy, hogy végül olyan mezőn álljon meg, amelyen saját bábuja van. Ha nincs más lépésre lehetősége, akkor a játékos nem lép.</p>
+        <p>Ha a játékos egy bábuval olyan mezőre lép, amelyen egy másik színű bábu van, akkor azt a bábut kiüti, és azt a megfelelő színű, pályán kívüli várakozóhelyre kell visszatenni, és a szabály szerint kell újra játékba hozni. A „kerti úton” haladó bábu már nem üthető ki. Leüthető viszont az a bábu is, amelyik a színes startmezőn áll.</p>
+        <p>A játékos taktikai lehetőségei arra szorítkoznak, hogy mikor melyik bábuval lép, illetve 6-os dobás esetén játékba hozza-e egy bábuját.</p>
+    </div>
 </body>
 </html>
