mar en se tudom mi tortenik a kodba

--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
         <tr>
             <td colspan="2"></td>
             <td id="m27">x</td>
-            <td>red</td>
-            <td>red</td>
+            <td class="redfinish">red</td>
+            <td class="redfinish">red</td>
             <td colspan="2" rowspan="2"></td>
-            <td>blue</td>
-            <td>blue</td>
+            <td class="bluefinish">blue</td>
+            <td class="bluefinish">blue</td>
             <td id="m8">x</td>
             <td colspan="2"></td>
         </tr>
         <tr>
             <td colspan="2"></td>
             <td id="m26">x</td>
-            <td>red</td>
-            <td>red</td>
-            <td>blue</td>
-            <td>blue</td>
+            <td class="redfinish">red</td>
+            <td class="redfinish">red</td>
+            <td class="bluefinish">blue</td>
+            <td class="bluefinish">blue</td>
             <td id="m9">x</td>
             <td colspan="2"></td>
         </tr>
@@ -72,21 +72,21 @@
         <tr>
             <td colspan="2"></td>
             <td id="m23">x</td>
-            <td>yellow</td>
-            <td>yellow</td>
+            <td class="yellowfinish">yellow</td>
+            <td class="yellowfinish">yellow</td>
             <td colspan="2" rowspan="2"></td>
-            <td>green</td>
-            <td>green</td>
+            <td class="greenfinish">green</td>
+            <td class="greenfinish">green</td>
             <td id="m12">x</td>
             <td colspan="2"></td>
         </tr>
         <tr>
             <td colspan="2"></td>
             <td id="m22">x</td>
-            <td>yellow</td>
-            <td>yellow</td>
-            <td>green</td>
-            <td>green</td>
+            <td class="yellowfinish">yellow</td>
+            <td class="yellowfinish">yellow</td>
+            <td class="greenfinish">green</td>
+            <td class="greenfinish">green</td>
             <td id="m13">x</td>
             <td colspan="2"></td>
         </tr>
